TODO
* lnkinfo: : should be before \t
* check behavior of liblnk_file_link_refers_to_file() seems to block certain time values from being printed.
* update msvscpp files
* what about trailing data in xp lnk files ?
* what about shell items
* what about ole properties
* pylnk add functions

File format:
* Ignore the location information (ForceNoLinkInfo)
* what is controlled by the has location info?

Checks
* compare environment variables string and unicode string
* compare icon location data string, string and unicode string
  - data string not necessary equal to string in data block, due to expansion of %VAR%

Refactor
* volume information read into separate subfunction
* network share information read into separate subfunction

Debug
* print descriptive name of data_block_signature
* print values of additional extra blocks
  - console properties data block
  - console codepage data block
  - shim layer data block
  - metadata property store data block
  - shell item identifiers list data block
* remaining known folder identifiers in test set

Library
* create API functions to access link information values
* add libfvalue

API
* add functions
  - for icon location block ?
  - for special and/or known folder identifier
* remove liblnk_file_get_link_target_identifier_data

Release:
* check TODOs
* configure
 - check inclusion local library functions
* update manuals
* automated tests
  - 2x open/close (bfio and normal)

Bindings:
* .net
* java

20140731
* bug fix in Python-bindings

20140730
* worked on shell items support
* small changes in debug output

20140729
* small changes in lnkinfo output

20140723
* worked on dpkg debug packages support

20140715
* worked on dpkg debug packages support

20140714
* worked on shell items support

20140622
* updated dependencies

20140323
* worked on Python bindings

20140112
* worked on updates

20140107
* 2014 update
* updated dependencies
* worked on Python bindings