@@ -14,6 +14,8 @@ AM_CPPFLAGS = \
 	@LIBBFIO_CPPFLAGS@ \
 	@LIBFDATETIME_CPPFLAGS@ \
 	@LIBFGUID_CPPFLAGS@ \
+	@LIBFOLE_CPPFLAGS@ \
+	@LIBFWPS_CPPFLAGS@ \
 	@LIBFWSI_CPPFLAGS@ \
 	@PTHREAD_CPPFLAGS@
 
@@ -42,6 +44,7 @@ liblnk_la_SOURCES = \
 	liblnk_libcstring.h \
 	liblnk_libfdatetime.h \
 	liblnk_libfguid.h \
+	liblnk_libfwps.h \
 	liblnk_libfwsi.h \
 	liblnk_libuna.h \
 	liblnk_link_information.c liblnk_link_information.h \
@@ -70,6 +73,8 @@ liblnk_la_LIBADD = \
 	@LIBBFIO_LIBADD@ \
 	@LIBFDATETIME_LIBADD@ \
 	@LIBFGUID_LIBADD@ \
+	@LIBFOLE_LIBADD@ \
+	@LIBFWPS_LIBADD@ \
 	@LIBFWSI_LIBADD@ \
 	@PTHREAD_LIBADD@
 
