@@ -23,9 +23,8 @@
 #define _LIBLNK_INTERNAL_ERROR_H
 
 #include <common.h>
+#include <file_stream.h>
 #include <types.h>
-
-#include <stdio.h>
 
 #if !defined( HAVE_LOCAL_LIBLNK )
 #include <liblnk/error.h>
