@@ -34,6 +34,7 @@
 #include <libfwsi_file_entry_extension.h>
 #include <libfwsi_item.h>
 #include <libfwsi_item_list.h>
+#include <libfwsi_known_folder_identifier.h>
 #include <libfwsi_network_location.h>
 #include <libfwsi_root_folder.h>
 #include <libfwsi_shell_folder_identifier.h>
