@@ -13,6 +13,7 @@ AM_CPPFLAGS = \
 	@LIBBFIO_CPPFLAGS@ \
 	@LIBFDATETIME_CPPFLAGS@ \
 	@LIBFGUID_CPPFLAGS@ \
+	@LIBFOLE_CPPFLAGS@ \
 	@LIBFWPS_CPPFLAGS@ \
 	@LIBFWSI_CPPFLAGS@ \
 	@LIBCSYSTEM_CPPFLAGS@ \
@@ -44,6 +45,7 @@ lnkinfo_LDADD = \
 	@LIBCSYSTEM_LIBADD@ \
 	@LIBFWSI_LIBADD@ \
 	@LIBFWPS_LIBADD@ \
+	@LIBFOLE_LIBADD@ \
 	@LIBFGUID_LIBADD@ \
 	@LIBFDATETIME_LIBADD@ \
 	@LIBUNA_LIBADD@ \
